--- a/package.json
+++ b/package.json
@@ -14,10 +14,26 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.0",
     "@clerk/nextjs": "^6.12.6",
+    "@dnd-kit/core": "^6.3.1",
+    "@google/genai": "^0.10.0",
+    "@inngest/agent-kit": "^0.7.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@schematichq/schematic-components": "^0.7.13",
+    "@schematichq/schematic-react": "^1.2.4",
+    "@schematichq/schematic-typescript-node": "^1.1.10",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.22.0",
+    "inngest": "^3.34.2",
+    "lucide-react": "^0.487.0",
     "next": "15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
