--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "receipt-tracker",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
     "dev:frontend": "next dev",
@@ -9,25 +10,30 @@
     "predev": "convex dev --until-success && convex dashboard",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:gemini": "node --loader ts-node/esm inngest/agents/testGeminiApi.mts"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.25.0",
     "@clerk/nextjs": "^6.12.6",
     "@dnd-kit/core": "^6.3.1",
     "@google/genai": "^0.10.0",
+    "@google/generative-ai": "^0.24.1",
     "@inngest/agent-kit": "^0.7.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@schematichq/schematic-components": "^0.7.13",
     "@schematichq/schematic-react": "^1.2.4",
     "@schematichq/schematic-typescript-node": "^1.1.10",
     "@stripe/react-stripe-js": "^3.6.0",
+    "axios": "^1.9.0",
+    "canvas": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.22.0",
     "inngest": "^3.34.2",
     "lucide-react": "^0.487.0",
     "next": "15.2.3",
+    "pdfjs-dist": "^5.3.93",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
@@ -41,11 +47,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
